--- a/Ark Server/css/highligts-style.css
+++ b/Ark Server/css/highligts-style.css
@@ -1,4 +1,4 @@
-.highligts-background {
+.highlights-background {
     background-color: rgba(78, 79, 85, 0.598);
     border: 2px solid rgb(108, 108, 108, 0.8);
     border-radius: 10px;
