--- a/Ark Server/css/index-style.css
+++ b/Ark Server/css/index-style.css
@@ -10,3 +10,52 @@
     margin:20px auto 0;
     width: 90%;
 }
+
+h1, h2, h3, h4, b{
+    color: white;
+}
+
+.banner img {
+    width: 100%;
+    max-width: 1250px;
+    border-radius: 10px;
+    border: 2px solid rgba(72, 70, 86, 0.8);
+}
+
+.gif-text {
+    padding: 0;
+    border: none;
+    display: flex;
+    align-items: center; /* Zentriert das GIF vertikal zum Text */
+}
+
+.gif img {
+    width: 100%;
+    max-width: 300px; /* Breite des GIF anpassen */
+    height: auto; /* Höhe proportional zur Breite */
+    object-fit: cover; /* Optional: Zuschneiden des GIFs */
+    border-radius: 20px;
+    border: 2px solid rgba(72, 70, 86, 0.8);
+}
+
+.gif {
+    margin-left: auto; /* Schiebt das GIF nach rechts */
+}
+
+.gif img:hover {
+    scale: 1.1;
+}
+
+@media screen and (max-width: 930px) {
+    .gif-text {
+        flex-direction: column;
+        align-items: flex-start; /* Richtet den Inhalt links aus */
+    }
+
+    .gif {
+        margin-right: auto; /* Schiebt das GIF nach links */
+        margin-left: 0;
+    }
+}
+
+
