--- a/Ark Server/css/style.css
+++ b/Ark Server/css/style.css
@@ -5,13 +5,18 @@ body {
     background-repeat: no-repeat; /* Verhindert, dass das Bild wiederholt wird */
     background-attachment: fixed; /* Bild bleibt fixiert beim Scrollen */
     margin: 0; /* Entfernt Standardabstand für den body */
-    font-family: Arial, sans-serif; /* Beispiel-Schriftart für die gesamte Seite */
+    font-family: "Inconsolata", sans-serif; /* Beispiel-Schriftart für die gesamte Seite */
 
     /* Body auf volle Höhe setzen und Flexbox verwenden */
     display: flex;
     flex-direction: column;
     min-height: 100vh;
     margin: 0;
+}
+
+h1, h2, h3, h4{
+    border-bottom: 2px solid #b5b5b5;
+    display: inline-block;
 }
 
 /* Hauptinhalt dehnt sich aus, um den freien Platz zu füllen */
