--- a/css/highligts-style.css
+++ b/css/highligts-style.css
@@ -104,10 +104,23 @@ img:hover {
 .Boss-5 { grid-area: 2 / 2 / 3 / 3; }
 .Boss-6 { grid-area: 2 / 3 / 3 / 4; }
 
-.video-trailer video {
+.video-trailer {
+    position: relative;
     width: 100%;
+    padding-bottom: 56.25%; /* Verhältnis 16:9, also Höhe durch Breite (9 / 16 = 0.5625) */
+    height: 0;
+    overflow: hidden;
     border-radius: 10px;
     border: 2px solid rgba(72, 70, 86, 0.8);
+}
+
+.video-trailer iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: inherit; /* Erbt den border-radius vom Container */
 }
 
 @media screen and (max-width: 800px) {
